<?xml version="1.0"?>
<package format="2">
  <name>rcvm_core</name>
  <version>0.1.0</version>
  <description>The rcvm_core package contains shared RCVM resources such as service and message definitions.</description>

  <maintainer email="fulto081@umn.edu">Michael Fulton</maintainer>

  <license>MIT</license>

  <url type="website">https://github.umn.edu/fulto081/rcvm_core</url>

  <author email="fulto081@umn.edu">Michael Fulton</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
